--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.0",
     "react-toastify": "^10.0.5",
+    "rsync": "^0.6.1",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
